Closed
Bug 328718
Opened 17 years ago
Closed 15 years ago
GetEdgePaperMarginCoord should extend one inch
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla1.9beta3
People
(Reporter: Hb, Assigned: Hb)
Details
Attachments
(1 file)
1.36 KB,
patch
|
roc
:
review+
roc
:
superreview+
roc
:
approval1.9+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; de-DE; rv:1.7.12) Gecko/20050915 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; de-DE; rv:1.7.12) Gecko/20050915 In prefs.js settings for the distance between the paper edges and the header- and footerlines can be made in 'print_edge_top', '..._left', '..._bottom' and '..._right'. These settings are read in http://lxr.mozilla.org/seamonkey/ident?i=GetEdgePaperMarginCoord where the values are limited to one inch. Contrary to the comment in line http://lxr.mozilla.org/seamonkey/source/layout/generic/nsSimplePageSequence.cpp#198 this limitation is sometimes to small and should be extended to two or three inches. Reproducible: Always Steps to Reproduce: - See code -
Updated•17 years ago
|
Component: General → Layout
Product: Firefox → Core
QA Contact: general → layout
Version: unspecified → Trunk
I use fanfold paper with a tear-off part wider than an inch. The maximum value of 1.0 inch causes that the right parts of header and footer are partially printed on the tear-off part of the sheet. I can not submit anything to the code. Please do this after your review.
Attachment #299411 -
Flags: review?
Attachment #299411 -
Flags: review? → review?(roc)
Comment on attachment 299411 [details] [diff] [review] Patch for current code thanks!
Attachment #299411 -
Flags: superreview+
Attachment #299411 -
Flags: review?(roc)
Attachment #299411 -
Flags: review+
Attachment #299411 -
Flags: approval1.9+
Updated•15 years ago
|
Assignee: nobody → hb
Comment 3•15 years ago
|
||
Checking in layout/generic/nsSimplePageSequence.cpp; /cvsroot/mozilla/layout/generic/nsSimplePageSequence.cpp,v <-- nsSimplePageSequence.cpp new revision: 3.162; previous revision: 3.161 done
Status: NEW → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M11
You need to log in
before you can comment on or make changes to this bug.
Description
•