Bug 328718 - "GetEdgePaperMarginCoord should extend one inch" [p=hb@calen.de (Hb) r+sr+a1.9=roc]